--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<%=render('layouts/header') %>
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-5">
+			<div class="login-form">
+					<div class="login-form">
+            <div class="form-group">
+              <input type="text" class="form-control login-field" value="" placeholder="Enter your name" id="login-name">
+              <label class="login-field-icon fui-user" for="login-name"></label>
+            </div>
+
+            <div class="form-group">
+              <input type="password" class="form-control login-field" value="" placeholder="Password" id="login-pass">
+              <label class="login-field-icon fui-lock" for="login-pass"></label>
+            </div>
+
+            <a class="btn btn-primary btn-lg btn-block" href="#">Log in</a>
+            <a class="login-link" href="#">Lost your password?</a>
+          </div>
+			</div>
+		</div>
+		<div class="col-md-7">
+			<h1>Bienvenido a la experiencia del cabello</h1>
+			<p>Te ayudamos a encontrar el lugar que cambiará tu estilo <strong>para siempre</strong></p>
+		</div>
+	</div>
+
+
+</div><!-- /.container -->
+
